force-app/main/default/objects/Vehicle_Schedule__c/Vehicle_Schedule__c.object-meta.xml
<CustomObject>
    <label>Vehicle Schedule</label>
    <nameField>
        <label>Vehicle Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles Scedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>