force-app/main/default/objects/Vehicle_Schedule__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Distribution_Center__c</referenceTo>
    <relationshipLabel>Vehicles Scedule (Destination)</relationshipLabel>
    <relationshipName>Vehicles_Scedule1</relationshipName>
    <type>Lookup</type>
</CustomField>