force-app/main/default/objects/Vehicle_Schedule__c/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <label>Distribution Center</label>
    <referenceTo>Distribution_Center__c</referenceTo>
    <relationshipLabel>Vehicles Schedule</relationshipLabel>
    <relationshipName>Vehicles_Schedule</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>