force-app/main/default/objects/Vehicle_Schedule__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicle_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>