force-app/main/default/objects/Vehicle_Schedule__c/fields/Scheduled_departure_date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_departure_date__c</fullName>
    <label>Scheduled departure date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>