force-app/main/default/objects/Vehicle_Schedule__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicles_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>